# Humbug

./: .gitignore  .gitmodules  BuildDependencies.bat  BuildDependencies.sh  BuildDependencies_2010.bat  BuildDependencies_2010x64.bat  BuildDependencies_2013.bat  Copyright  Cygwin.bat  Debug.tws  MinGW Shell.lnk  README  Tags.txt  VStudio2005CMD.lnk  VStudio2010CMD.lnk  Visual Studio Command Prompt (2010).lnk  devel2008.bat  devel2008x64.bat  devel2010.bat  devel2010x64.bat  devel2013x64.bat  devel2015x64.bat  initial.cmd  msys.bat  startcmake.bat
projects/: CMakeLists.txt  Readme.txt  Scripts.komodoproject  bindings.cmake  bindings_2.cmake  install.cmake  np.session  project.cfg
projects/GuiLib/: Animation.h  CMakeLists.txt  MathDefs.h  Readme.md  Timing.cpp  Timing.h  Timing2.h  TimingChain.cpp  TimingChain.h  TimingDefs.h  defs.h  project.cfg  stdafx.cpp  stdafx.h
projects/GuiLib/Animation/: AnimatedRectangle.h  SinusoidWobbler.h
projects/GuiLib/Filesystem/: FileLoader.cpp  FileLoader.h
projects/GuiLib/GUI/: Disposable.cpp  Disposable.h  GuiFontMetrics.cpp  GuiFontMetrics.h
projects/GuiLib/Input/: KeyboardHandler.cpp  KeyboardHandler.h
projects/GuiLib/TEMPLATES/: Component.cpp  Component.h
projects/GuiLib/docs/: !DevelNotes.txt  CMakeLists.txt  GuiLib.doxygen  SeamlessImage.ai
projects/Humbug/: CMakeLists.txt  Project.tws  Readme.md
projects/Humbug/Artwork/: CMakeLists.txt
projects/Humbug/HumbugShared/: CMakeLists.txt  project.cfg  stdafx.h
projects/Humbug/Lua/: globalclass.lua  iowrite.lua  male_sprites.spr  sprite1.lua
projects/Humbug/TEMPLATES/: Class.h  Class1.h  Model.h  Template.cpp  Template.h  TemplateOstream.cpp  TemplateS.cpp  TmplModel.cpp  TmplScreen.cpp  TmplScreen.h  TmplSprite.cpp  TmplSprite.h
projects/Humbug/XSD/: Nummer1.proj  Nummer1.tmplproj  Nummer2.tmplproj  project.dtd  project.xsd
projects/Humbug/doc/: !DevelNotes.txt
projects/Humbug/docs/: !DevelNotes.txt  CMakeLists.txt  Readme.txt  Tiles.txt
projects/Humbug/src/: AssetList.hxx  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  Customlexer.cpp  Customlexer.h  HumbugFileLoader.cpp  HumbugFileLoader.h  PlayerKeys.cpp  PlayerKeys.h  SdlInfo.cpp  SdlInfo.h  Selection.cpp  Selection.h  SelectionDialog.cpp  SelectionDialog.h  SelectionDialog.ui  SelectionMarker.cpp  SelectionMarker.h  StartScreen.cpp  StartScreen.h  TestEventHandler.cpp  TestEventHandler.h  TestScreen.h  TestThread.cpp  TestThread.h  TestTimer.cpp  TestTimer.h  XCodeEditor.cpp  XCodeEditor.h  calculatorform.cpp  calculatorform.h  calculatorform.ui  defs.h  lexerdsl.cpp  lexerdsl.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  (+2 more)
projects/HumbugCore/: CMakeLists.txt  global.h  project.cfg  stdafx.h  stddefs.h
projects/HumbugCore/Serialization/: LoadTest.cpp  Test.cpp  Test.h
projects/HumbugCore/TEMPLATES/: GameObject.cpp  GameObject.h
projects/HumbugCore/UnitTests/: CMakeLists.txt  GVector2D.cpp  Test.cpp  zfs01.cpp
projects/HumbugCore/docs/: !DevelNotes.txt  CMakeLists.txt
projects/HumbugGL/: CMakeLists.txt  Readme.md
projects/HumbugGL/Artwork/: CMakeLists.txt
projects/HumbugGL/Model/: Crunchy-Bodies.tws
projects/HumbugGL/TEMPLATES/: Model.cpp  TemplateOstream.h  TmplModel.h  TmplScreen.cpp  TmplScreen.h  TmplSprite.h
projects/HumbugGL/XSD/: Nummer1.proj  Nummer1.tmplproj  Nummer3.tmplproj  project-pumpernickel.xml  project.xsd
projects/HumbugGL/docs/: !DevelNotes.txt  CMakeLists.txt  HumbugGL.doxygen  Readme.txt
projects/HumbugGL/src/: CMakeLists.txt  HumbugGLFileLoader.cpp  HumbugGLFileLoader.h  TestEventHandler.cpp  TestEventHandler.h  TestThread.cpp  TestThread.h  TestTimer.h  main.cpp  stdafx.h
projects/HumbugGLCore/: CMakeLists.txt  Readme.md  stdafx.cpp  stdafx.h
projects/HumbugGLCore/Serialization/: Test.cpp  Test.h
projects/HumbugGLCore/UnitTests/: CMakeLists.txt  Test.cpp  zfs01.cpp
projects/HumbugGLCore/docs/: !DevelNotes.txt  CMakeLists.txt  HumbugGLCore.doxygen
projects/HumbugGLLib/: CMakeLists.txt
projects/HumbugGLLib/docs/: CMakeLists.txt  HumbugGLLib-devel-notes.txt  HumbugGLLib.doxygen
projects/HumbugGLLib/src/: CMakeLists.txt
projects/HumbugGLSerialization/: CMakeLists.txt  Readme.md  global.h  stdafx.h  stddefs.h
projects/HumbugGLSerialization/Serialization/: InfoTextLoader.cpp  InfoTextLoader.h  Test.cpp  Test.h  Token.h  VersionToken.cpp  VersionToken.h
projects/HumbugGLSerialization/TEMPLATES/: GameObject.cpp  GameObject.h
projects/HumbugGLSerialization/UnitTests/: CMakeLists.txt  Test.cpp  unit_test_example_01.cpp  zfs01.cpp
projects/HumbugGLSerialization/docs/: !DevelNotes.txt  CMakeLists.txt  HumbugGLSerialization.doxygen
projects/HumbugGLShared/: CMakeLists.txt  GB.cpp  global.h  stdafx.h
projects/HumbugGLShared/GameObjects/: GPoint2D.cpp  GPoint2D.h  GVector2D.cpp  GVector2D.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  Template.cpp  Template.h
projects/HumbugGLShared/Project/: ProcessProject.cpp  ProcessProject.h  ProcessProjectPrivate.cpp  ProcessProjectPrivate.h
projects/HumbugGLShared/ScriptHost/: LuaScript.cpp  LuaScript.h  ScriptHost.cpp  ScriptHost.h  ScriptHostIO.h  ScriptHostImpl.h  ScriptHostPrivate.h  plainc_hooks.h
projects/HumbugGLShared/TEMPLATES/: GameObject.cpp  GameObject.h
projects/HumbugGLShared/Test/: ProjectParser.cpp
projects/HumbugGLShared/UnitTests/: CMakeLists.txt  GVector2D.cpp  (+1 more)
projects/HumbugLib/: CMakeLists.txt
projects/HumbugSerialization/: CMakeLists.txt  Readme.md
projects/HumbugShared/: CMakeLists.txt  GB.cpp  GB.h  defs.h  global.h  stdafx.cpp
projects/Playground/: CMakeLists.txt  arti-format4.bat  arti-format4.bat.lnk  boost_ptr_map.cpp  boost_serialization01.cpp  cpp014a01.cpp  cpp014a06.cpp  csz_textdocument.cpp  doc_view_acm.cpp  indent.bat  loki1.cpp  lyxreplace.cpp  mytree.cpp  oss.cpp  primgen1.cpp  scratchb01.cpp  scratchb02.cpp  scratchb03.cpp  scratchb04.cpp  stdafx.h  uncrusty-format.lnk  uncrusty.bat  unicode.cpp  vector.cpp  words.txt  zfs.cpp  zlibtest.cpp  zlibtest_2.cpp
projects/SupportLibs/: !!! GMTL Lib checken !!!.txt  CMakeLists.txt  IMPORTANT.txt
(+810 files in other folders)
